--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -25,10 +25,10 @@ jobs:
           python-version: '3.12'
           cache: 'pip'
       - name: Lint YAML
-      - run: |
+        run: |
           cd modules/validate-schema
           pip install -r requirements.txt
-./validate.py ../../models.yaml ../models-schema.yaml
+          ./validate.py ../../models.yaml ../models-schema.yaml
 
   release:
     needs: validate
