--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -36,6 +36,7 @@ jobs:
         id: release-please
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          config-file: ./.github/release-please-config.json
 
   release-node:
     name: Release Node
