--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -35,7 +35,8 @@ jobs:
       - uses: googleapis/release-please-action@v4
         id: release-please
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          release-type: simple
+          manifest-file: .github/release-please-manifest.json
           config-file: .github/release-please-config.json
 
   release-node:
