build: fix workflow (#5)
* build: fix workflow

* fix build

* build: node workflow

* fix build

* fix build

* fix build

* fix build

* fix build

* fix build

* fix build

* chore: release 0.1.0

Release-As: 0.1.0

* chore: release 0.1.0

Release-As: 0.1.0

* chore: release 0.1.0

Release-As: 0.1.0

* fix build

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -15,20 +15,15 @@ jobs:
     runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
-      - uses: ibiqlik/action-yamllint@v3
-        name: Lint YAML
-        with:
-          file_or_dir: 'model.yaml'
-      - name: Setup Python for YAML Linting YAML
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v5
         with:
           python-version: '3.12'
           cache: 'pip'
       - name: Lint YAML
-      - run: |
+        run: |
           cd modules/validate-schema
           pip install -r requirements.txt
-./validate.py ../../models.yaml ../models-schema.yaml
+          ./validate.py ../../models.yaml ../models-schema.yaml
 
   release:
     needs: validate
@@ -40,10 +35,43 @@ jobs:
       - uses: googleapis/release-please-action@v4
         id: release-please
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
           release-type: simple
+          manifest-file: .github/release-please-manifest.json
+          config-file: .github/release-please-config.json
 
-  update-model:
+  release-node:
+    name: Release Node
+    needs: release
+    if: ${{ needs.release.outputs.released }}
+    runs-on: ubuntu-24.04
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node for Release
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_LTS_VERSION }}
+          registry-url: 'https://registry.npmjs.org'
+
+      - name: Build Distributable
+        run: |
+          npm install
+          npm run build
+
+      - name: Publish to NPM
+        run: |
+          if [ "$NODE_AUTH_TOKEN" == "" ]; then
+            echo "The 'NPM_TOKEN' secret must be set to deploy to NPM"
+            exit 1
+          else
+            echo "Publishing to NPM..."
+            npm publish --access=public
+          fi
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+  attach-assets:
     needs: release
     if: ${{ needs.release.outputs.released }}
     runs-on: ubuntu-24.04
@@ -51,34 +79,10 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Update models.yaml
-        run: |
-          VERSION="${{ needs.release.outputs.tag }}"
-          DATE=$(date +'%Y-%m-%d')
-          sed -i.bak -E \
-            -e "s/^version: .*/version: ${VERSION#v}/" \
-            -e "s/^updated: .*/updated: ${DATE}/" models.yaml
-          rm models.yaml.bak
-      - name: Commit updated models.yaml
-        run: |
-          git config user.name "github-actions"
-          git config user.email "actions@github.com"
-          git commit -am "chore: update models.yaml for release ${{ needs.release.outputs.tag }}"
-          git push origin main
-      - name: Attach updated models.yaml to Release
+          ref: main
+      - name: Attach assets to GitHub Release
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           gh release upload "${{ needs.release.outputs.tag }}" models.yaml --clobber
-  update-node-module:
-    needs: release
-    if: ${{ needs.release.outputs.released }}
-    runs-on: ubuntu-24.04
-    steps:
-      - name: Update Node Package Version
-        run: |
-          cd modules/node
-          npm version "${{ needs.release.outputs.tag }}" --no-git-tag-version
-          git add package.json
-          git commit -m "chore: update node package version for release ${{ needs.release.outputs.tag }}"
-          git push origin main
+
