--- a/modules/node/package.json
+++ b/modules/node/package.json
@@ -5,8 +5,8 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc",
-    "build:watch": "tsc -w",
+    "build": "npm run update-models && tsc",
+    "build:watch": "npm run update-models && tsc -w",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
     "prepare": "husky",
@@ -17,7 +17,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand --no-coverage",
     "test:watch": "jest --watch --no-coverage",
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "update-models": "cp ../../models.yaml ."
   },
   "files": [
     "dist"
@@ -34,6 +35,7 @@
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.6",
+    "ts-node": "^10.9.2",
     "typescript": "^5.8.2",
     "yaml": "^2.7.0"
   }
