--- a/modules/node/.eslintrc.yaml
+++ b/modules/node/.eslintrc.yaml
@@ -10,4 +10,4 @@ parserOptions:
   ecmaVersion: 2020
   sourceType: "module"
 parser: "@typescript-eslint/parser"
-
+ignorePatterns: ['dist/', 'artifacts/']
