--- a/modules/node/package.json
+++ b/modules/node/package.json
@@ -29,14 +29,16 @@
     "@types/jest": "^29.5.14",
     "@typescript-eslint/eslint-plugin": "^8.26.1",
     "@typescript-eslint/parser": "^8.26.1",
+    "eslint": "^8.0.0",
     "eslint-config-prettier": "^8.0.0",
     "eslint-plugin-prettier": "^5.2.3",
-    "eslint": "^8.0.0",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.6",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.2",
+    "typescript": "^5.8.2"
+  },
+  "dependencies": {
     "yaml": "^2.7.0"
   }
 }
