fix(node): missing models.yaml in node

--- a/modules/node/package.json
+++ b/modules/node/package.json
@@ -5,7 +5,9 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
+    "prebuild": "cp ../../models.yaml .",
     "build": "npm run update-models && tsc",
+    "postbuild": "cp models.yaml ./dist",
     "build:watch": "npm run update-models && tsc -w",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
