fix(node): fix missing models.yaml

--- a/modules/node/package.json
+++ b/modules/node/package.json
@@ -22,7 +22,8 @@
     "update-models": "cp ../../models.yaml ."
   },
   "files": [
-    "dist"
+    "dist",
+    "models.yaml"
   ],
   "author": "dwmkerr",
   "license": "MIT",
