--- a/models.yaml
+++ b/models.yaml
@@ -3,12 +3,14 @@ updated: 2025-03-12T00:00:00.000Z
 source: https://github.com/dwmkerr/ai-providers-and-models
 author: dwmkerr
 providers:
-  - id: openai
+  openai:
+    id: openai
     name: OpenAI
     docs: https://platform.openai.com/docs/models
     api_specification: openai/v1
     models:
-      - id: gpt-4o-2024-08-06
+      "gpt-4o-2024-08-06":
+        id: gpt-4o-2024-08-06
         name: GPT-4o
         documentation_url: https://platform.openai.com/docs/models/gpt-4o
         description_short: Fast, intelligent, flexible GPT model
@@ -42,7 +44,42 @@ providers:
           speech_generation: false
           transcription: false
           translation: false
-      - id: o3-mini-2025-01-31
+
+      "gpt-4.5-preview":
+        id: gpt-4.5-preview
+        name: GPT-4.5
+        documentation_url: https://platform.openai.com/docs/models/gpt-4.5-preview
+        description_short: Enhanced GPT model with improved reasoning and conversational abilities
+        description: >-
+          GPT-4.5 is the latest iteration in the GPT series, offering significant improvements in reasoning, factual accuracy, and multi-turn conversational capabilities over previous models. Building on the advancements of GPT-4, it delivers faster performance and refined outputs. Currently in preview, it provides a glimpse into the future of AI-driven interactions.
+        status: preview
+        knowledge_cutoff: April 2024
+        context_window: 8192
+        max_output_tokens: 8192
+        validated: false
+        pricing:
+          input_per_million: 4
+          output_per_million: 12
+        modalities:
+          text: true
+          image: false
+          audio: false
+        endpoints:
+          assistants: true
+          batch: false
+          completions_legacy: false
+          embeddings: false
+          fine_tuning: true
+          image_generation: false
+          moderation: false
+          realtime: false
+          responses: true
+          speech_generation: false
+          transcription: false
+          translation: false
+
+      "o3-mini-2025-01-31":
+        id: o3-mini-2025-01-31
         name: o3-mini
         documentation_url: https://platform.openai.com/docs/models/o3-mini
         description_short: Fast, flexible, intelligent reasoning model
