--- a/models.yaml
+++ b/models.yaml
@@ -7,7 +7,8 @@ providers:
     id: openai
     name: OpenAI
     docs: https://platform.openai.com/docs/models
-    api_specification: openai/v1
+    api_specification: api.openai.com/v1
+    base_url: https://api.openai.com/v1/
     models:
       gpt-4o-2024-08-06:
         id: gpt-4o-2024-08-06
@@ -223,3 +224,12 @@ providers:
           speech_generation: false
           transcription: false
           translation: false
+
+  # Providers: Claude
+  claude:
+    id: claude
+    name: Claude
+    docs: https://docs.anthropic.com/en/docs/about-claude/models/all-models
+    api_specification: api.anthropic.com/v1
+    base_url: https://api.anthropic.com/v1/
+    models: {}
