--- a/modules/node/models.yaml
+++ b/modules/node/models.yaml
@@ -32,9 +32,11 @@ providers:
           text: true
           image: false
           audio: false
+          video: false
         endpoints:
           assistants: true
           batch: false
+          chat_completions: true
           completions_legacy: false
           embeddings: false
           fine_tuning: true
@@ -71,9 +73,11 @@ providers:
           text: true
           image: false
           audio: false
+          video: false
         endpoints:
           assistants: true
           batch: false
+          chat_completions: true
           completions_legacy: false
           embeddings: false
           fine_tuning: true
@@ -106,9 +110,11 @@ providers:
           text: true
           image: false
           audio: false
+          video: false
         endpoints:
           assistants: true
           batch: false
+          chat_completions: true
           completions_legacy: false
           embeddings: false
           fine_tuning: false
@@ -141,9 +147,11 @@ providers:
           text: true
           image: true
           audio: false
+          video: false
         endpoints:
           assistants: true
           batch: false
+          chat_completions: true
           completions_legacy: false
           embeddings: false
           fine_tuning: true
@@ -178,9 +186,11 @@ providers:
           text: true
           image: true
           audio: false
+          video: false
         endpoints:
           assistants: true
           batch: true
+          chat_completions: true
           completions_legacy: false
           embeddings: false
           fine_tuning: true
@@ -211,9 +221,132 @@ providers:
           text: true
           image: false
           audio: false
+          video: false
         endpoints:
           assistants: true
           batch: true
+          chat_completions: true
+          completions_legacy: false
+          embeddings: false
+          fine_tuning: true
+          image_generation: false
+          moderation: false
+          realtime: false
+          responses: true
+          speech_generation: false
+          transcription: false
+          translation: false
+
+  # Providers: Gemini
+  gemini:
+    id: gemini
+    name: Gemini
+    docs: https://ai.google.dev/gemini-api/docs/models
+    api_specification: generativelanguage.googleapis.com/v1beta
+    base_url: https://generativelanguage.googleapis.com/v1beta/
+    additional_endpoints:
+      # Gemini has OpenAI compatible endpoints.
+      # https://ai.google.dev/gemini-api/docs/openai
+      - api_specification: api.openai.com/v1
+        base_url: https://generativelanguage.googleapis.com/v1beta/openai/
+    models:
+      models/gemini-2.0-flash:
+        id: "models/gemini-2.0-flash"
+        name: "Gemini 2.0 Flash"
+        documentation_url: "https://ai.google.dev/gemini-api/docs/models/gemini#gemini-2.0-flash"
+        description_short: "Our newest multimodal model, with next generation features and improved capabilities"
+        description: "Gemini 2.0 Flash delivers next-gen features and improved capabilities, including superior speed, native tool use, multimodal generation, and a 1M token context window."
+        warnings: "'endpoints' are not mapped correctly, see #19; always check pricing; input modalities text only"
+        status: "general-availability"
+        knowledge_cutoff: "August 2024"
+        context_window: 1048576
+        max_output_tokens: 8192
+        validated: false
+        # https://ai.google.dev/gemini-api/docs/pricing
+        pricing:
+          input_per_million: 0.10
+          output_per_million: 0.40 
+        modalities: 
+          text: true
+          image: true
+          audio: true
+          video: true
+        endpoints:
+          assistants: false
+          batch: false
+          chat_completions: true
+          completions_legacy: false
+          embeddings: false
+          fine_tuning: true
+          image_generation: false
+          moderation: false
+          realtime: false
+          responses: true
+          speech_generation: false
+          transcription: false
+          translation: false
+
+      models/gemini-2.0-flash-lite:
+        id: "models/gemini-2.0-flash-lite"
+        name: "Gemini 2.0 Flash-Lite"
+        documentation_url: "https://ai.google.dev/gemini-api/docs/models/gemini#gemini-2.0-flash-lite"
+        description_short: "A Gemini 2.0 Flash model optimized for cost efficiency and low latency"
+        description: "A Gemini 2.0 Flash model optimized for cost efficiency and low latency."
+        status: "general-availability"
+        knowledge_cutoff: "August 2024"
+        context_window: 1048576
+        max_output_tokens: 8192
+        validated: false
+        warnings: "'endpoints' are not mapped correctly, see #19; always check pricing; input modalities text only"
+        # https://ai.google.dev/gemini-api/docs/pricing
+        pricing:
+          input_per_million: 0.075
+          output_per_million: 0.30 
+        modalities: 
+          text: true
+          image: true
+          audio: true
+          video: true
+        endpoints:
+          assistants: false
+          batch: false
+          chat_completions: true
+          completions_legacy: false
+          embeddings: false
+          fine_tuning: true
+          image_generation: false
+          moderation: false
+          realtime: false
+          responses: true
+          speech_generation: false
+          transcription: false
+          translation: false
+
+      models/gemini-1.5-flash:
+        id: "models/gemini-1.5-flash"
+        name: "Gemini 1.5 Flash"
+        documentation_url: "https://ai.google.dev/gemini-api/docs/models/gemini#gemini-1.5-flash"
+        description_short: "Our most balanced multimodal model with great performance for most tasks"
+        description: "Gemini 1.5 Flash is a fast and versatile multimodal model for scaling across diverse tasks."
+        warnings: "'endpoints' are not mapped correctly, see #19; always check pricing; input modalities text only"
+        status: "general-availability"
+        knowledge_cutoff: "September 2024"
+        context_window: 1048576
+        max_output_tokens: 8192
+        validated: false
+        # https://ai.google.dev/gemini-api/docs/pricing
+        pricing:
+          input_per_million: 0.075
+          output_per_million: 0.30 
+        modalities: 
+          text: true
+          image: true
+          audio: true
+          video: true
+        endpoints:
+          assistants: false
+          batch: false
+          chat_completions: true
           completions_legacy: false
           embeddings: false
           fine_tuning: true
