--- a/.github/workflows/node.yaml
+++ b/.github/workflows/node.yaml
@@ -71,3 +71,4 @@ jobs:
         uses: codecov/codecov-action@v5
         with:
           directory: ./artifacts/coverage
+          token: ${{ secrets.CODECOV_TOKEN }}
