chore: updated date

--- a/models.yaml
+++ b/models.yaml
@@ -1,5 +1,5 @@
 version: 0.1.7
-updated: 2025-03-12T00:00:00.000Z
+updated: 2025-03-18
 source: https://github.com/dwmkerr/ai-providers-and-models
 author: dwmkerr
 providers:
